--- a/client/makefile
+++ b/client/makefile
@@ -7,11 +7,11 @@ SRCDIR = src
 OBJDIR = obj
 
 # ソースファイルとオブジェクトファイル
-SOURCES = $(SRCDIR)/client_main.cpp $(SRCDIR)/client_game.cpp $(SRCDIR)/client_renderer.cpp
+SOURCES = $(wildcard $(SRCDIR)/**/*.cpp)
 OBJECTS = $(SOURCES:$(SRCDIR)/%.cpp=$(OBJDIR)/%.o)
 
 # コンパイルオプション
-OPTION = -lSDL2 -lSDL2_image
+OPTION = -I../include -lSDL2 -lSDL2main -lSDL2_ttf -lSDL2_mixer -lSDL2_image -lGL -lGLEW -lSOIL -pthread
 
 # 出力のターゲット
 TARGET = main
