ファイル整理

--- a/test4/makefile
+++ b/test4/makefile
@@ -1,27 +1,36 @@
 # コンパイラとオプション
 CXX = g++
-CXXFLAGS = -Wall -std=c++11
+CXXFLAGS = -Wall -std=c++17
+
+# ディレクトリ設定
+SRCDIR = src
+OBJDIR = obj
 
 # ソースファイルとオブジェクトファイル
-SOURCES = $(wildcard *.cpp)
-OBJECTS = $(SOURCES:%.cpp=%.o)
+SOURCES = $(wildcard $(SRCDIR)/*.cpp) 
+OBJECTS = $(SOURCES:$(SRCDIR)/%.cpp=$(OBJDIR)/%.o)
 
 # コンパイルオプション
-INCLUDE = -I../include 
-LIBRARY = -lSDL2 -lSDL2main -lSDL2_ttf -lSDL2_mixer -lSDL2_image -lGL -lGLEW -lSOIL -pthread -lGLU
+INCLUDE = -I../include -pthread
+LIBRARY = -lSDL2 -lSDL2main -lSDL2_ttf -lSDL2_mixer -lSDL2_image -lGL -lGLEW -lSOIL -lGLU -ljoyconlib -lhidapi-hidraw -lm
+
 # 出力のターゲット
-TARGET = Main
+TARGET = main
 
 # 全体ビルドターゲット
-all: $(TARGET)
+all: $(OBJDIR) $(TARGET)
 
-# リンクターゲット
+# obj ディレクトリがない場合は作成
+$(OBJDIR):
+	@mkdir -p $(OBJDIR)
+
+# ターゲットの作成
 $(TARGET): $(OBJECTS)
-	$(CXX) $(OBJECTS) -o $(TARGET) $(INCLUDE) $(LIBRARY)
+	$(CXX) $(OBJECTS) -o $@ $(LIBRARY)
 
-# コンパイル
-%.o: %.cpp
-	$(CXX) $(CXXFLAGS) -c $< -o $@
+# ソースファイルをオブジェクトファイルに変換
+$(OBJDIR)/%.o: $(SRCDIR)/%.cpp
+	$(CXX) $(CXXFLAGS) $(INCLUDE) -c $< -o $@
 
 # クリーンターゲット
 clean:
