--- a/client/makefile
+++ b/client/makefile
@@ -1,21 +1,22 @@
 # コンパイラとオプション
 CXX = g++
 CXXFLAGS = -Wall -std=c++17 -g
-# -L../lib
 
 # ディレクトリ設定
-SRCDIR = src 
-# ../common/src
-OBJDIR = obj
+CLIENT_SRCDIR = src
+COMMON_SRCDIR = ../common/src
+CLIENT_OBJDIR = obj/client
+COMMON_OBJDIR = obj/common
 MYINCDIR = -I../include
 MYLIBDIR = -L../lib
 
 # ソースファイルとオブジェクトファイル
-SOURCES = $(shell find $(SRCDIR) -name "*.cpp")
+CLIENT_SOURCES = $(shell find $(CLIENT_SRCDIR) -name "*.cpp")
+COMMON_SOURCES = $(shell find $(COMMON_SRCDIR) -name "*.cpp")
 
-SOURCES_NOTDIR = $(notdir $(SOURCES))
-SOURCES_DIRS = $(dir $(SOURCES))  # 各ソースファイルのディレクトリ部分
-OBJECTS = $(patsubst $(SRCDIR)/%.cpp, $(OBJDIR)/%.o, $(SOURCES))  # ディレクトリ構造を保ったままオブジェクトファイルを作成
+# オブジェクトファイルのパスをディレクトリごとに設定
+CLIENT_OBJECTS = $(patsubst $(CLIENT_SRCDIR)/%, $(CLIENT_OBJDIR)/%, $(CLIENT_SOURCES:.cpp=.o))
+COMMON_OBJECTS = $(patsubst $(COMMON_SRCDIR)/%, $(COMMON_OBJDIR)/%, $(COMMON_SOURCES:.cpp=.o))
 
 # コンパイルオプション
 INCLUDE = $(MYINCDIR) -pthread
@@ -25,29 +26,32 @@ LIBRARY = $(MYLIBDIR) -Wl,-rpath,'$$ORIGIN/../lib'  -lSDL2 -lSDL2main -lSDL2_ttf
 TARGET = main
 
 # 全体ビルドターゲット
-all: $(OBJDIR) $(TARGET)
-
+all: $(CLIENT_OBJDIR) $(COMMON_OBJDIR) $(TARGET)
 
 # obj ディレクトリがない場合は作成
-$(OBJDIR):
-	@mkdir -p $(OBJDIR)
+$(CLIENT_OBJDIR):
+	@mkdir -p $(CLIENT_OBJDIR)
 
-# ターゲットの作成
-$(TARGET): $(OBJECTS)
-	$(CXX) $(OBJECTS) -o $@ $(LIBRARY)
+$(COMMON_OBJDIR):
+	@mkdir -p $(COMMON_OBJDIR)
 
 # ソースファイルをオブジェクトファイルに変換
-# すべての .o ファイルを obj フォルダ内の同じ層に作成する
-$(OBJDIR)/%.o: $(SRCDIR)/%.cpp
-	@mkdir -p $(dir $@)  # obj/ディレクトリ内にサブディレクトリを作成
+# client/src/ のソースファイルを client/obj/client にオブジェクトファイルを作成
+$(CLIENT_OBJDIR)/%.o: $(CLIENT_SRCDIR)/%.cpp
+	@mkdir -p $(dir $@)  # obj/client/components のようなサブディレクトリを作成
 	$(CXX) $(CXXFLAGS) $(INCLUDE) -c $< -o $@
+
+# common/src/ のソースファイルを client/obj/common にオブジェクトファイルを作成
+$(COMMON_OBJDIR)/%.o: $(COMMON_SRCDIR)/%.cpp
+	@mkdir -p $(dir $@)  # obj/common のサブディレクトリを作成
+	$(CXX) $(CXXFLAGS) $(INCLUDE) -c $< -o $@
+
+# ターゲットの作成
+$(TARGET): $(CLIENT_OBJECTS) $(COMMON_OBJECTS)
+	$(CXX) $(CLIENT_OBJECTS) $(COMMON_OBJECTS) -o $@ $(LIBRARY)
 
 # クリーンターゲット
 clean:
-	rm -f $(OBJECTS) $(TARGET)
+	rm -f $(CLIENT_OBJECTS) $(COMMON_OBJECTS) $(TARGET)
 
 .PHONY: all clean
-
-show:
-	@echo "Sources: $(SOURCES)"
-	@echo "Objects: $(OBJECTS)"
