--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -77,6 +77,7 @@
         "thread": "cpp",
         "xtree": "cpp",
         "deque": "cpp",
-        "random": "cpp"
+        "random": "cpp",
+        "queue": "cpp"
     }
 }
