update仮想関数化

--- a/server/.vscode/settings.json
+++ b/server/.vscode/settings.json
@@ -75,6 +75,7 @@
         "regex": "cpp",
         "stop_token": "cpp",
         "thread": "cpp",
-        "xtree": "cpp"
+        "xtree": "cpp",
+        "deque": "cpp"
     }
 }
