フレーム同期

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -78,6 +78,8 @@
         "xtree": "cpp",
         "deque": "cpp",
         "random": "cpp",
-        "queue": "cpp"
+        "queue": "cpp",
+        "ranges": "cpp",
+        "span": "cpp"
     }
 }
