texture仮貼り付け

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -80,6 +80,23 @@
         "random": "cpp",
         "queue": "cpp",
         "ranges": "cpp",
-        "span": "cpp"
+        "span": "cpp",
+        "bitset": "cpp",
+        "cinttypes": "cpp",
+        "complex": "cpp",
+        "condition_variable": "cpp",
+        "coroutine": "cpp",
+        "csignal": "cpp",
+        "cwctype": "cpp",
+        "expected": "cpp",
+        "filesystem": "cpp",
+        "future": "cpp",
+        "mutex": "cpp",
+        "numeric": "cpp",
+        "set": "cpp",
+        "source_location": "cpp",
+        "stack": "cpp",
+        "unordered_set": "cpp",
+        "variant": "cpp"
     }
 }
