--- a/server/.vscode/settings.json
+++ b/server/.vscode/settings.json
@@ -76,6 +76,7 @@
         "stop_token": "cpp",
         "thread": "cpp",
         "xtree": "cpp",
-        "deque": "cpp"
+        "deque": "cpp",
+        "mutex": "cpp"
     }
 }
