--- a/server/.vscode/settings.json
+++ b/server/.vscode/settings.json
@@ -77,6 +77,7 @@
         "thread": "cpp",
         "xtree": "cpp",
         "deque": "cpp",
-        "mutex": "cpp"
+        "mutex": "cpp",
+        "queue": "cpp"
     }
 }
